@@ -1,3 +1,8 @@
+2011-01-31  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/47416
+	* g++.dg/cpp0x/pr47416.C: New test.
+
 2011-01-31  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/47519
